trying to fix font errors

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,8 @@
 
 @font-face {
     font-family: 'Integral CF';
-    src: url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.otf)format('opentype'),
-         url(../fonts/Satoshi/Satoshi-Regular.otf)format('opentype');
+    src: url(fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.otf)format('opentype'),
+         url(fonts/Satoshi/Satoshi-Regular.otf)format('opentype');
     font-weight: normal;
     font-style: normal;
 }
