--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+/* * {
+    outline: 1px solid red;
+} */
+
 a {
     text-decoration: none;
     color: black;
@@ -92,4 +96,121 @@ ul li {
 }
 
 
+.body-picture {
+    max-width: 100%;
+    height: 663px;
+    margin-top: 24px;
+}
 
+.big-star {
+    max-width: 104px;
+    height: 104px;
+    position: absolute;
+    top: 182px;
+    left: 1255px;
+}
+
+.small-star {
+    max-width: 56px;
+    height: 56px;
+    position: absolute;
+    top: 431px;
+    left: 750px;
+}
+
+.title-box {
+    max-width: 577px;
+    height: 238px;
+    position: absolute;
+    top: 199px;
+    left: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.title {
+    max-width: 577px;
+    height: 173px;
+    position: relative;
+    font-size: 64px;
+    line-height: 64px;
+    display: flex;
+    font-family: 'Integral CF';
+    color: #000;
+    text-align: left;
+    align-items: center;
+}
+
+.subtitle {
+    max-width: 545px;
+    height: 33px;
+    position: relative;
+    font-size: 16px;
+    line-height: 22px;
+    font-family: 'Satoshi';
+    color: rgba(0, 0, 0, 0.6);
+    text-align: left;
+    display: inline-block;
+}
+
+.shop-now-button button {
+    width: 210px;
+    position: absolute;
+    top: 469px;
+    left: 100px;
+    border-radius: 62px;
+    background-color: #000;
+    height: 52px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 16px 54px;
+    box-sizing: border-box;
+    text-align: left;
+    font-size: 16px;
+    color: #fff;
+    font-family: Satoshi;
+}
+
+.info-box {
+    max-width: 596px;
+    height: 74px;
+    position: absolute;
+    top: 569px;
+    left: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 32px;
+}
+
+.number {
+    position: relative;
+    font-size: 40px;
+    font-family: 'Satoshi';
+    font-weight: bold;
+    color: #000;
+    text-align: left;
+}
+
+.info {
+    position: relative;
+    font-size: 16px;
+    line-height: 22px;
+    font-family: 'Satoshi';
+    font-weight: normal;
+    color: rgba(0, 0, 0, 0.6);
+    text-align: left;
+}
+
+.line-div {
+    height: 100%;
+    max-width: 100%;
+    position: relative;
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+}
