--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,17 @@ a {
     color: black;
 }
 
+header {
+    position: fixed; /* Keeps the header fixed at the top of the page */
+    top: 0; /* Aligns the header to the top of the viewport */
+    left: 0; /* Aligns the header to the left of the viewport */
+    width: 100%; /* Makes the header span the full width of the page */
+    height: 96px; /* Adjust the height of the header */
+    background-color: white; /* Background color for the header */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Adds a subtle shadow */
+    z-index: 1000; /* Ensures the header stays above other elements */
+}
+
 .header-box {
     max-width: 1240px;
     margin: auto;
@@ -99,7 +110,7 @@ ul li {
 .body-picture {
     max-width: 100%;
     height: 663px;
-    margin-top: 24px;
+    margin-top: 96px;
 }
 
 .big-star {
@@ -213,4 +224,16 @@ ul li {
     position: relative;
     border-right: 1px solid rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
+}
+
+.brands {
+    max-width: 1440px;
+    width: 100%;
+    height: 122px;
+    background-color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 106px;
 }
