--- a/styles/style.css
+++ b/styles/style.css
@@ -152,7 +152,7 @@ main {
     max-width: 7.22%;
     height: auto;
     position: absolute;
-    top: 20.22%;
+    top: 8.22%;
     left: 87.15%;
 }
 
@@ -164,7 +164,7 @@ main {
 
 .small-star {
     position: absolute;
-    top: 55%;
+    top: 19%;
     left: 52.08%;
     max-width: 3.89%;
     height: auto;
@@ -269,12 +269,10 @@ main {
     gap: 32px;
 }
 
-
-
 .title-box {
     max-width: 90%;
     position: absolute;
-    top: 25%;
+    top: 9%;
     left: 7%;
     right: 0%;
     display: flex;
@@ -282,6 +280,241 @@ main {
     gap: 20px;
 }
 
+.brands {
+    max-width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 43px;
+    background-color: black;
+}
+
+.title-new-arrivals {
+    position: relative;
+    width: 100%;
+    max-width: 403px;
+    font-size: clamp(24px, 5vw, 48px);
+    display: inline-block;
+    font-family: 'Integral CF', sans-serif;
+    color: #000;
+    text-align: center;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    margin-top: 72px;
+}
+
+.new-arrivals {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    margin: 0 99px;
+    margin-top: 50px;
+}
+
+.clothes-box {
+    max-width: 100%;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 8px;
+    flex-shrink: 0;
+}
+
+.clothes-name {
+    max-width: 225px;
+    width: 100%;
+    position: relative;
+    font-size: 20px;
+    display: inline-block;
+    font-family: 'Satoshi', sans-serif;
+    font-weight: bold;
+    color: #000;
+    text-align: left;
+}
+
+.clothes-price {
+    position: relative;
+    font-size: 24px;
+    font-family: 'Satoshi';
+    color: #000;
+    text-align: left;
+}
+
+.raiting{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 13px;
+}
+
+.raiting-num {
+    position: relative;
+    font-size: 14px;
+    font-family: 'Satoshi';
+    text-align: left;
+    color: #000;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.view-all {
+    position: relative;
+    font-weight: 500;
+}
+.view-all-parent button{
+    max-width: 218px;
+    width: 100%;
+    height: 52px;
+    position: relative;
+    border-radius: 30px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    height: 52px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    margin-top: 36px;
+    text-align: left;
+    font-size: 16px;
+    color: #000;
+    font-family: 'Satoshi';
+}
+
+.line2-div {
+    max-width: 1240px;
+    width: 100%;
+    position: relative;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    height: 1px;
+    margin: 0 auto;
+    margin-top: 64px;
+}
+
+.prices {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: left;
+    gap: 20px;
+}
+
+.old-price {
+    position: relative;
+    font-size: 24px;
+    text-decoration: line-through;
+    font-family: 'Satoshi';
+    color: rgba(0, 0, 0, 0.4);
+    text-align: left;
+}
+
+.discount {
+    max-width: 100%;
+    position: relative;
+    border-radius: 62px;
+    background-color: rgba(255, 51, 51, 0.1);
+    overflow: hidden;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 6px 14px;
+    box-sizing: border-box;
+    text-align: left;
+    font-size: 12px;
+    color: #ff3333;
+    font-family: 'Satoshi';
+}
+
+.title-top-selling {
+    position: relative;
+    width: 100%;
+    max-width: 403px;
+    font-size: clamp(24px, 5vw, 48px);
+    display: inline-block;
+    font-family: 'Integral CF', sans-serif;
+    color: #000;
+    text-align: center;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    margin-top: 64px;
+}
+
+.top-selling {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    margin: 0 99px;
+    margin-top: 50px;
+}
+
+.browse-by-dress-parent-box {
+    max-width: 1240px;
+    width: 100%;
+    background-color: #F0F0F0;
+    margin: 0 auto;
+    margin-top: 80px;
+    border-radius: 40px;
+    /* padding: 192px 64px; */
+}
+
+.browse-by-dress-title {
+    max-width: 687px;
+    width: 100%;
+    position: relative;
+    font-size: 48px;
+    display: inline-block;
+    font-family: 'Integral CF';
+    color: #000;
+    text-align: center;
+    padding-top: 70px;
+    margin-left: 276px;
+}
 
 
+@media (max-width: 1440px) and (min-width: 1190px) {
+.top-selling {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    margin: 0 99px;
+    margin-top: 50px;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+}
 
+.new-arrivals {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    margin: 0 99px;
+    margin-top: 50px;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+}
+
+.clothes-box {
+    max-width: 100%;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 8px;
+    flex-shrink: 0;
+}
+}
