--- a/styles/style.css
+++ b/styles/style.css
@@ -633,8 +633,188 @@ main {
     gap: 8px;
 }
 
+.footer-top-box {
+    max-width: 1240px;
+    width: 100%;
+    background-color: #000000;
+    border-radius: 20px;
+    padding-block: 36px;
+    padding-inline: clamp(16px, 5vw, 64px);
+    margin: 0 auto;
+    margin-top: 80px;
+    margin-bottom: -90px;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-top-title {
+    max-width: 551px;
+    width: 100%;
+    position: relative;
+    font-size: 40px;
+    line-height: 45px;
+    display: inline-block;
+    font-family: 'Integral CF';
+    color: #fff;
+    text-align: left;
+    height: 94px;
+}
+
+.email-and-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 12px;
+}
+
+.email-input input{
+    width: 349px;
+    position: relative;
+    border-radius: 62px;
+    background-color: #fff;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 12px 16px;
+    box-sizing: border-box;
+    gap: 12px;
+    text-align: left;
+    font-size: 16px;
+    color: rgba(0, 0, 0, 0.4);
+    font-family: 'Satoshi';
+}
+
+.subscribe-button button{
+    width: 349px;
+    position: relative;
+    border-radius: 62px;
+    background-color: #fff;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 12px 16px;
+    box-sizing: border-box;
+    text-align: left;
+    font-size: 16px;
+    color: #000;
+    font-family: 'Satoshi';
+}
+
+.footer-first-box{
+    max-width: 1440px;
+    width: 100%;
+    background-color: #F0F0F0;
+    /* margin-top: 170px; */
+    padding: 10vw 7vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 7.5vw;
+}
+
+.footer-second-box {
+    max-width: 1440px;
+    width: 100%;
+    background-color: #F0F0F0;
+    padding: 25px 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.footer-title {
+    position: relative;
+    font-size: 33.45px;
+    font-family: 'Integral CF';
+    color: #000;
+    text-align: left;
+}
+
+.footer-subtitle {
+    max-width: 248px;
+    position: relative;
+    font-size: 14px;
+    line-height: 22px;
+    font-family: 'Satoshi';
+    color: rgba(0, 0, 0, 0.6);
+    text-align: left;
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
+.footer-title-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 25px;
+}
+
+.company-links a {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    font-size: 16px;
+    line-height: 40px;
+    font-family: 'Satoshi';
+    color: rgba(0, 0, 0, 0.6);
+    text-align: left;
+}
+
+.company-title {
+    position: relative;
+    font-size: 16px;
+    letter-spacing: 3px;
+    line-height: 18px;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-family: 'Satoshi';
+    color: #000;
+    text-align: left;
+}
+
+.footer-company-box, .footer-help-box, .footer-faq-box, .footer-resources-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 26px;
+}
+
+.line3-div {
+    width: 100%;
+    position: relative;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    height: 1px;
+}
+
+.footer-rights {
+    max-width: 1440px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 
 
+.rights-text {
+    width: 269px;
+    position: relative;
+    font-size: 14px;
+    font-family: 'Satoshi';
+    color: rgba(0, 0, 0, 0.6);
+    text-align: right;
+    display: inline-block;
+}
 
 @media (max-width: 1440px) and (min-width: 1190px) {
 .top-selling {
