--- a/styles/style.css
+++ b/styles/style.css
@@ -330,11 +330,19 @@ main {
     flex-direction: column;
     justify-content: space-between;
     gap: 8px;
-    flex-shrink: 0;
+    /* flex-shrink: 0;
 
     border: 10px solid transparent;
     border-radius: 12px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    transition: transform 0.3s ease, box-shadow 0.3s ease; */
+}
+
+.vertical-stript-shirt, .courage_graphic_tshirt, .loose_fit_bermuda_shorts, .faded_skinny_jeans{
+    width: 295px;
+}
+
+.t-shirt, .skiny_fit_jeans, .checkered_shirt, .sleeve-striped-tshirt{
+    width: 295px;
 }
 
 .clothes-box:hover {
@@ -858,7 +866,7 @@ main {
     /* header */
 }
 
-@media (max-width: 1350px) and (min-width: 1025px) {
+@media (max-width: 1350px) and (min-width: 1034px) {
     /* header */
 .header-box {
     max-width: 1040px;
@@ -895,39 +903,39 @@ main {
 }
 
 /* new arrivals, top selling, browse by dress */
+.sleeve-striped-tshirt {
+    display: none;
+}
+
+.faded_skinny_jeans {
+    display: none;
+}
+
+.top-selling-box, .new-arrivals-box {
+    max-width: 100%;
+    width: 100%;
+    margin: 0 auto;
+    padding-inline: clamp(16px, 5vw, 40px);
+}
 .top-selling {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    gap: 20px;
-    margin: 0 20px;
-    margin-top: 50px;
-    overflow-x: auto;
-    scroll-behavior: smooth;
+    gap: 25px;
 }
+
 
 .new-arrivals {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    gap: 20px;
-    margin: 0 20px;
-    margin-top: 50px;
-    overflow-x: auto;
-    scroll-behavior: smooth;
+    gap: 25px;
 }
 
-.clothes-box {
-    max-width: 100%;
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 8px;
-    flex-shrink: 0;
-}
 
 .browse-by-dress-parent-box >*{
     width: 100%;
