--- a/styles/style.css
+++ b/styles/style.css
@@ -1030,6 +1030,26 @@ main {
 
 /* info and title boxes */
 
+.title-box .info-box {
+    max-width: 50%;
+    flex-direction: row;
+    align-items: center;
+    text-align: left;
+    gap: 10px;
+}
+
+.title-box .info-box .box {
+    font-size: clamp(14px, 2.5vw, 22px);
+}
+
+
+.title-box .info-box .box .number {
+    font-size: clamp(16px, 3vw, 24px);
+}
+  
+.title-box .info-box .box .info {
+    font-size: clamp(10px, 2vw, 12px);
+}
 
 .brands {
     max-width: 100%;
@@ -1190,5 +1210,34 @@ main {
     justify-content: space-between;
     align-items: center;
 }
+
+.shop-now-button button {
+    width: clamp(160px, 30%, 210px);
+    position: relative;
+    border-radius: 4rem;
+    background-color: #000;
+    height: clamp(40px, 6vw, 52px);
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: clamp(10px, 2vw, 16px) clamp(24px, 5vw, 54px);
+    box-sizing: border-box;
+    text-align: left;
+    font-size: clamp(14px, 1.1vw, 16px);
+    color: #fff;
+    font-family: 'Satoshi', sans-serif;
+
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    cursor: pointer;
+}
+
+.shop-now-button button:hover {
+    background-color: #000000;
+    transform: translateY(-3px);
+}
+
+
 
 }
