--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,34 +1,20 @@
 @font-face {
     font-family: 'Integral CF';
-    src: url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.woff2)format('woff2'),
-        url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.woff)format('woff'),
-        url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.ttf)format('truetype'),
-            url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.svg#IntegralCF)format('svg'),
-            url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.eot)format('embedded-opentype'),
-            url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.eot?#iefix)format('embedded-opentype'),
-            url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.ttf#IntegralCF)format('truetype'),
-            url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.woff#IntegralCF)format('woff'),
-            url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.woff2#IntegralCF)format('woff2'),
-            url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.otf#IntegralCF)format('opentype'),
-            url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.svg#IntegralCF)format('svg'),
-            url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.eot?#iefix)format('embedded-opentype'),
-            url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.ttf#IntegralCF)format('truetype'),
-            url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.woff#IntegralCF)format('woff'),
-            url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.woff2#IntegralCF)format('woff2'),
-            url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.otf#IntegralCF)format('opentype');
+    src: url(../fonts/IntegralCF/Fontspring-DEMO-integralcf-bold.otf#IntegralCF)format('opentype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Satoshi';
-    src: url(../fonts/Satoshi/Satoshi-Regular.woff2) format('woff2'),
-            url(../fonts/Satoshi/Satoshi-Regular.woff) format('woff'),
-            url(../fonts/Satoshi/Satoshi-Regular.ttf) format('truetype'),
-            url(../fonts/Satoshi/Satoshi-Regular.eot) format('embedded-opentype'),
-            url(../fonts/Satoshi/Satoshi-Regular.svg#Satoshi) format('svg'),
-            url(../fonts/Satoshi/Satoshi-Bold.woff2) format('woff2'),
-            url(../fonts/Satoshi/Satoshi-Bold.woff) format('woff');
+    src: url(../fonts/Satoshi/Satoshi-Black.woff2) format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Satoshi Light';
+    src: url(../fonts/Satoshi/Satoshi-Light.woff2) format('woff2');
     font-weight: normal;
     font-style: normal;
 }
